carousel & tab: alignment issue resolved.

--- a/src/styles/css/at-am-navy-grape.css
+++ b/src/styles/css/at-am-navy-grape.css
@@ -4593,6 +4593,11 @@ amexio-homepage-centerpanel .homepage-centerpanel {
 
 .homepage-centerpanel-flex {
   flex-grow: 1;
+  padding-top: 50px;
+  width: 81%; }
+
+.homepage-centerpanel-flex-fullview {
+  flex-grow: 1;
   padding-top: 50px; }
 
 .homepage-3 .homepage-expand {
