--- a/src/styles/def/component/homepage-structure.scss
+++ b/src/styles/def/component/homepage-structure.scss
@@ -93,7 +93,13 @@ amexio-homepage-centerpanel .homepage-centerpanel {
 .homepage-centerpanel-flex {
     flex-grow: 1;
     padding-top: 50px;
-}
+    width: 81%;
+    
+} 
+.homepage-centerpanel-flex-fullview {
+    flex-grow: 1;
+    padding-top: 50px;
+} 
 
 .homepage-3 .homepage-expand {
     display: flex;
